--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,10 @@
 			<artifactId>jooq-codegen</artifactId>
 			<version>3.8.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 
 	</dependencies>
 
