--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,12 @@
 			<artifactId>nitrite</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.11.3</version>
+		</dependency>
 
 	</dependencies>
 
