--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,11 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.11.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.appengine</groupId>
+			<artifactId>appengine-api-1.0-sdk</artifactId>
+			<version>1.9.63</version>
+		</dependency>
 
 	</dependencies>
 
